# Cui

./: CLAUDE.md  CONTEXT.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/anneal/api/: app.py  deps.py  routes.py
backend/anneal/domain/: constants.py  events.py  projections.py
backend/anneal/lens/: __init__.py  prefilter.py  topic_terms.py
backend/anneal/llm/: prompts.py
backend/anneal/search/: __init__.py  arxiv.py  crossref.py  dedupe.py  europe_pmc.py  multi.py  openalex.py  pubmed.py  semantic_scholar.py
backend/anneal/services/: collect_service.py  event_service.py  grill_service.py  grounding_service.py  lens_service.py
backend/anneal/store/: database.py  repository.py  schema.py
backend/scripts/: canary_l3.py
backend/tests/: fakes.py  test_acceptance.py  test_api.py  test_arxiv_search.py  test_collect_service.py  test_corpus_graph.py  test_corpus_graph_tier1.py  test_crossref_search.py  test_dedupe.py  test_europepmc_search.py  test_event_service.py  test_event_store.py  test_events.py  test_grill_service.py  test_grounding_service.py  test_invariants.py  test_lens_feed_service.py  test_lens_prefilter.py  test_lens_prompts.py  test_lens_service.py  test_lens_taste.py  test_llm_prompts.py  test_models.py  test_openalex_search.py  test_park_service.py  test_pg_integration.py  test_projections.py  test_promote_service.py  test_pubmed_search.py  test_repository.py  test_search_all.py  test_semantic_scholar_search.py
docs/: plan-trajectory-spine.md  scope-l4-agenda-copilot.md  spec-lens-contradiction.md  (+4 more)
frontend/: index.html  (+2 more)
(+18 files in other folders)
