[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anneal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "pytest-asyncio",
]
