[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anneal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "httpx",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "anthropic>=0.30",
]
dev = [
  "pytest",
  "httpx",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
